# syntony

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ci_gating.md  concepts.md  verifiers.md
examples/: basic_usage.py  sample_evalcase.json
syntony/: __init__.py  cli.py  schema.py
syntony/agreement/: __init__.py  report.py
syntony/decompose/: __init__.py  base.py  sentence.py
syntony/metrics/: __init__.py  faithfulness.py
syntony/verify/: __init__.py  base.py  lexical.py  nli.py
tests/: test_agreement.py  test_cli.py  test_decompose.py  test_faithfulness.py  test_lexical.py  test_nli.py  test_schema.py
