[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "syntony"
version = "0.1.0"
description = "Offline, traceable grounding and faithfulness verifier for LLM outputs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "jplgarin" }]
keywords = ["llm", "faithfulness", "grounding", "nli", "evaluation", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2,<3",
]

[project.optional-dependencies]
# NLI backend. Kept out of the core install so the default install stays light
# and fully offline; install with: pip install 'syntony[nli]'
nli = [
    "transformers>=4.30",
    "torch>=2.0",
]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "mypy>=1.11",
    "flake8>=6",
]

[project.scripts]
syntony = "syntony.cli:main"

[project.urls]
Homepage = "https://github.com/jplgarin/syntony"
Source = "https://github.com/jplgarin/syntony"

[tool.setuptools.packages.find]
include = ["syntony*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["syntony"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
ignore_missing_imports = true
files = ["syntony"]

[tool.flake8]
# flake8 itself does not read pyproject; this block documents the intended
# config. The repo ships an equivalent .flake8 / setup.cfg-free setup via CI
# flags. Kept here so the values live in one obvious place.
max-line-length = 90
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist"]
